src/main/java/com/example/springrestdemo/exception/error/CharacterInvalidException.java
package com.example.springrestdemo.exception.error;

public class CharacterInvalidException extends RuntimeException {

    public CharacterInvalidException() {
        super( "No special characters allowed");
    }

}
